# Lyra-san

./: .gitignore  00_START_HERE.txt  ARCHITECTURE.md  BREAKTHROUGH_EXPLANATION.md  BUILD_FIX.md  CHECKLIST.txt  COGNITIVE_INTEGRATION_EXPLAINED.md  COMPLETE_OVERVIEW.md  COMPLETE_UPDATE_SUMMARY.md  CONSCIOUSNESS_COMPLETE.md  CONSCIOUSNESS_IMPLEMENTATION_SUMMARY.md  CONSCIOUSNESS_INTEGRATION_EXAMPLE.py  CONSCIOUSNESS_QUICKSTART.md  CONSCIOUSNESS_SYSTEM.md  CONSCIOUSNESS_SYSTEM_REFERENCE.sh  DEPLOYMENT_CHECKLIST.txt  EMERGENCE_FRAMEWORK.md  EMERGENCE_QUICKSTART.md  FILES_CREATED.txt  FILE_INDEX.txt  FIXES_APPLIED.txt  GAP_ANALYSIS.md  INDEX.md  MASTER_CHANGE_LOG.txt  MEMORY_FIX_COMPLETE.md  MEMORY_FIX_GUIDE.md  MEMORY_PERSISTENCE_TESTS.md  MEMORY_SYSTEM_ANALYSIS.md  MEMORY_SYSTEM_VERIFIED.md  PATTERN_MODE_IMPLEMENTATION.md  PATTERN_MODE_QUICK_REFERENCE.md  PROJECT_STATUS.md  QUICKSTART.sh  README.md  README_CONSCIOUSNESS.md  READY_TO_BUILD.txt  READY_TO_TEST.md  RUST_COMPILATION_FIXED.txt  RUST_IMPLEMENTATION.md  SESSION_SUMMARY.md  (+30 more)
lyra_consciousness/: __init__.py  cognitive_integration.py  cognitive_orchestrator.py  emotions.py  epistemic_enforcer.py  guardrails.py  hardware_afferent_layer.py  intent_classifier.py  learning_system.py  mode_controller.py  mode_controller_pattern.py  mode_controller_v2.py  narrative_identity.py  output_validator.py  pattern_engine.py  perception_action.py  personality_engine.py  task_router.py  (+11 more)
lyra_core/: Cargo.toml  pyproject.toml  setup.py
lyra_core/src/: consciousness_core.rs  json_handler.rs  lib.rs  memory_manager.rs  text_parser.rs
(+119 files in other folders)
