[package]
name = "lyra-core"
version = "1.0.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
serde_json = "1.0"
regex = "1.10"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"

[lib]
name = "lyra_core"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
